# ChangeLog for app-xemacs/scheme
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/scheme/ChangeLog,v 1.22 2009/02/22 08:16:26 graaff Exp $

*scheme-1.17 (22 Feb 2009)

  22 Feb 2009; Hans de Graaff <graaff@gentoo.org> +scheme-1.17.ebuild:
  Version bump with minor fixes

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org> -scheme-1.14.ebuild:
  clean up

  12 May 2008; Markus Rothe <corsair@gentoo.org> scheme-1.15.ebuild:
  Stable on ppc64

  05 May 2008; Raúl Porcel <armin76@gentoo.org> scheme-1.15.ebuild:
  alpha/sparc stable wrt #219332

  02 May 2008; Christian Faulhammer <opfer@gentoo.org> scheme-1.15.ebuild:
  stable x86, bug 219332

  30 Apr 2008; nixnut <nixnut@gentoo.org> scheme-1.15.ebuild:
  Stable on ppc wrt bug 219332

  26 Apr 2008; Hans de Graaff <graaff@gentoo.org> scheme-1.15.ebuild:
  Mark stable on amd64 , bug #219332

  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  A herd should not be listed as maintainer

  28 Feb 2008; Raúl Porcel <armin76@gentoo.org> scheme-1.15.ebuild:
  Re-add ~ppc64, removed by mistake

  25 Oct 2007; Hans de Graaff <graaff@gentoo.org> -scheme-1.13.ebuild:
  Remove old version

  03 Jun 2007; Hans de Graaff <graaff@gentoo.org> scheme-1.14.ebuild:
  Stable on amd64, ppc, ppc64, sparc, x86 as per #175560

  29 May 2007; Raúl Porcel <armin76@gentoo.org> scheme-1.14.ebuild:
  alpha stable wrt #175560

*scheme-1.15 (05 May 2007)

  05 May 2007; Hans de Graaff <graaff@gentoo.org> +scheme-1.15.ebuild:
  Version bump: bug fix for Windows

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*scheme-1.14 (12 Nov 2006)

  12 Nov 2006; Hans de Graaff <graaff@gentoo.org> +metadata.xml,
  -scheme-1.12.ebuild, +scheme-1.14.ebuild:
  Version bump; remove old version; add metadata.

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> scheme-1.13.ebuild:
  Stable on ppc.
