@@ -1,6 +1,11 @@
 # ChangeLog for app-xemacs/scheme
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/scheme/ChangeLog,v 1.22 2009/02/22 08:16:26 graaff Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/scheme/ChangeLog,v 1.23 2010/08/13 07:49:55 graaff Exp $
+
+*scheme-1.18 (13 Aug 2010)
+
+  13 Aug 2010; Hans de Graaff <graaff@gentoo.org> +scheme-1.18.ebuild:
+  Version bump: minor new functionality.
 
 *scheme-1.17 (22 Feb 2009)
 
